# bivicom-config-bot

./: .cursorignore  .env  .gitignore  BUILD_STANDALONE.md  BivicomRadarBot.spec  CLAUDE.md  COMPLETE_DOCUMENTATION.md  DEBUG_SUMMARY.md  ENHANCED_GUI_COMPLETE.md  GUI_ENTERPRISE_GUIDE.md  Info.plist  Launch\ Bivicom\ Radar\ Bot.command  MANIFEST.in  README.md  README_GUI.md  TAILSCALE_DEBUG_REPORT.md  TESTING_RESULTS.md  TEST_BUILD.md  UNIFIED_BIVICOM_BOT_DOCUMENTATION.md  UNIFIED_BIVICOM_BOT_WAN_CONFIG_DOCUMENTATION.md  WARP.md  bot_config.json  build.sh  build_cross_platform.sh  build_standalone.py  build_standalone.sh  build_standalone_fixed.py  build_windows.bat  config.json  create_app_bundle.sh  create_distribution_package.sh  create_multi_platform_packages.sh  create_working_app.sh  demo_enhanced_gui.py  deployment_report_1757357724.txt  deployment_report_1757360074.txt  deployment_report_1757361334.txt  fix_app_icon.sh  gui.py  gui_config.json  (+26 more)
Launch\ Bivicom\ Radar\ Bot.app/Contents/MacOS/: BivicomRadarBot
backups/: config_backup_20250914_122018.json  config_backup_20250914_204526.json
bivicom_config_bot/: __init__.py  gui_enhanced.py  master.py  network_config.sh
distribution_package/: DEPLOYMENT_GUIDE.md  INSTALL_FOR_FRIEND.sh  README_FOR_FRIEND.txt  script_no1.py
docs/: CLAUDE.md
nodered_flows_backup/: flows.json
releases/: README.txt
releases/bivicom-radar-bot-linux/: INSTALL.sh  README_LINUX.txt  script_no2.py
releases/bivicom-radar-bot-macos/: DEPLOYMENT_GUIDE.md  INSTALL.sh  README_MACOS.txt
releases/bivicom-radar-bot-windows/: INSTALL.bat  README_GUI.md  README_WINDOWS.txt  radar_bot_gui.py  requirements_gui.txt  script_no3.py
