[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bivicom-config-bot"
version = "1.0.2"
description = "A comprehensive network automation toolkit for configuring and deploying infrastructure on Bivicom IoT devices"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Loranet Technologies", email = "info@loranet.com"}
]
maintainers = [
    {name = "Loranet Technologies", email = "info@loranet.com"}
]
keywords = [
    "bivicom", "iot", "automation", "network", "configuration", 
    "ssh", "docker", "nodered", "tailscale", "openwrt", "uci"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
]
requires-python = ">=3.7"
dependencies = [
    "paramiko>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = ["plyer>=2.0.0"]
build = ["pyinstaller>=4.0"]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/Loranet-Technologies/bivicom-config-bot"
Documentation = "https://github.com/Loranet-Technologies/bivicom-config-bot#readme"
Repository = "https://github.com/Loranet-Technologies/bivicom-config-bot"
"Bug Tracker" = "https://github.com/Loranet-Technologies/bivicom-config-bot/issues"

[project.scripts]
bivicom-bot = "bivicom_config_bot.master:main"
bivicom-gui = "bivicom_config_bot.gui_enhanced:main"

[tool.setuptools]
packages = ["bivicom_config_bot"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.sh", "*.md", "*.json", "*.txt", "*.env.example"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
